--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
     <title>Carosello</title>
 </head>
 <body>
+
+    <div class="container position-relative">
+       <div class="row justify-content-center centred">
+        <div class="col-6">
+            <div class="slider position-relative">
+                <span class="prev position-absolute text-white"> <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></span>
+                <div class="images">
+                    <img src="./assets/img/01.webp" alt="spiderman">
+                </div>
+                <span class="next position-absolute text-white"> <i class="fa fa-arrow-circle-down" aria-hidden="true"></i></span>
+            </div>
+        </div>
+       </div>
+        </div>
+    </div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
