--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="slider position-relative">
                 <span class="prev position-absolute text-white"> <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></span>
                 <div class="images">
-                    <img src="./assets/img/01.webp" alt="spiderman">
+                    <!-- <img src="./assets/img/01.webp" alt="spiderman"> -->
                 </div>
                 <span class="next position-absolute text-white"> <i class="fa fa-arrow-circle-down" aria-hidden="true"></i></span>
             </div>
