--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 
-    <div class="container position-relative">
-       <div class="row justify-content-center centred">
+    <div class="container">
+       <div class="row justify-content-center">
         <div class="col-6">
             <div class="slider position-relative">
                 <span class="prev position-absolute text-white"> <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></span>
