--- a/index.html
+++ b/index.html
@@ -18,23 +18,24 @@
 <body>
 
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-4">
-                <div class="slider position-relative">
-                    <span class="prev position-absolute text-white"> <i class="fa fa-arrow-circle-up"
-                            aria-hidden="true"></i></span>
-                    <div class="d-flex">
-                        <div class="current_image">
+        <div class="row">
 
-                        </div>
-                        <div class="images">
+            <div class="current_image col-10">
 
-                        </div>
-                    </div>
-                    <span class="next position-absolute text-white"> <i class="fa fa-arrow-circle-down"
-                            aria-hidden="true"></i></span>
-                </div>
             </div>
+            <div class="slider position-relative col-2">
+                <span class="prev position-absolute text-white"> <i class="fa fa-arrow-circle-up"
+                        aria-hidden="true"></i></span>
+
+
+                <div class="images">
+
+                </div>
+
+                <span class="next position-absolute text-white"> <i class="fa fa-arrow-circle-down"
+                        aria-hidden="true"></i></span>
+            </div>
+
         </div>
     </div>
     </div>
