--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <body>
 
     <div class="container">
-        <div class="row">
+        <div class="row align-content-center justify-content-center">
 
-            <div class="current_image col-10">
+            <div class="current_image d-flex align-items-center justify-content-center col-10">
 
             </div>
-            <div class="slider position-relative col-2">
+            <div class="slider position-relative col-2 ">
                 <span class="prev position-absolute text-white"> <i class="fa fa-arrow-circle-up"
                         aria-hidden="true"></i></span>
 
